--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-
-    <title>title here</title>
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
+	 <link rel="stylesheet" href="app.css">
+    <title>Gallery 29</title>
 </head>
 <body>
 
