starting to really build my photo site..

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
     <title>Gallery 29</title>
 </head>
 <body>
+<div class="top"></div>
+<div class= "logo"></div>
+<div class= "name" </div>
+<div class= "middle"</div>
+<div class= "bottom"</div>
+
+
 
 </body>
 </html>
