--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,49 @@
     <title>Gallery 29</title>
 </head>
 <body>
-<div class="top"></div>
-<div class= "logo"></div>
-<div class= "name" </div>
-<div class= "middle"</div>
-<div class= "bottom"</div>
+	<nav>
+		<div class="icons">Back / Drop</div>
+		<span class="title">Alia's <em>Photos</em></span>
+		<div class="right">
+			<div class="mobile-only">+</div>
+			<ul>
+				<li>About</li>
+				<li>Work</li>
+				<li></li>
+			</ul>
+		</div>
+	</nav>
 
+	<div class="logo">
+		<img src="http://lorempixel.com/200/200" alt="">
+		<i class="fa fa-chevron-down"></i>
+		<span>Landscape</span>
+	</div>
 
+	<article>
+		<div class="photo">
+			<img src="http://lorempixel.com/600/400" alt="">
+			<h2>
+				Austin flannel salvia
+				<span class="date">05/05/2015</span>
+			</h2>
+		</div>
+		<div class="camera-details">
+			<span class="camera-model">
+				<i class="fa fa-camera"></i>
+				Cannon PowerShot S95
+			</span>
+			<span>
+				<i class="fa fa-eye"></i>22.5mm
+			</span>
+			<span>
+				<i class="fa fa-recycle"></i>f/5.6
+			</span>
+			<span>
+				<i class="fa fa-clock-o"></i>1/1000m
+			</span>
+		</div>
+	</article>
 
 </body>
 </html>
