--- a/public/index.html
+++ b/public/index.html
@@ -5,31 +5,64 @@
     <meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <link rel="stylesheet" href="app.css">
+
     <title>Gallery 29</title>
 </head>
 <body>
-	<nav>
-		<div class="icons">Back / Drop</div>
-		<span class="title">Alia's <em>Photos</em></span>
-		<div class="right">
-			<div class="mobile-only">+</div>
-			<ul>
-				<li>About</li>
-				<li>Work</li>
-				<li></li>
-			</ul>
-		</div>
-	</nav>
-
-	<div class="logo">
-		<img src="http://lorempixel.com/200/200" alt="">
-		<i class="fa fa-chevron-down"></i>
-		<span>Landscape</span>
-	</div>
-
+<div class="nav">
+        <span class="icons">
+            <i class="fa fa-arrow-left"></i>
+                /
+            <i class="fa fa-tint"></i>
+        </span>
+        <span class="Alia">
+            Alia Borroho
+        </span>
+        <span class="Gallery29">
+            Gallery29
+        </span>
+        <span class="items">
+            <a href="#">About</a>
+            <a href="#">Work</a>
+            <a href="#">Contact</a>
+        </span>
+    </div>
+    <div class="logo">
+        <img src="images/arch.jpeg" alt="logo">
+    </div>
+        <span class="over-logo">
+            Alia's Photos
+        </span>
+        <span class="triangle">
+            <i class="fa fa-chevron-down"></i>
+        </span>
 	<article>
 		<div class="photo">
-			<img src="http://lorempixel.com/600/400" alt="">
+			<img src="images/escalate.jpeg" alt="main-pic">
+			<h2 class="desc">
+				Austin flannel salvia
+				<span class="date">05/05/2015</span>
+			</h2>
+		</div>
+		<div class="camera-details">
+			<span class="camera-model">
+				<i class="fa fa-camera"></i>
+				Cannon PowerShot S95
+			</span>
+			<span>
+				<i class="fa fa-eye"></i>22.5mm
+			</span>
+			<span>
+				<i class="fa fa-recycle"></i>f/5.6
+			</span>
+			<span>
+				<i class="fa fa-clock-o"></i>1/1000m
+			</span>
+		</div>
+	</article>
+<article>
+		<div class="photo">
+			<img src="images/one-way.jpg" alt="main-pic">
 			<h2>
 				Austin flannel salvia
 				<span class="date">05/05/2015</span>
@@ -51,6 +84,29 @@
 			</span>
 		</div>
 	</article>
-
+	<article>
+		<div class="photo">
+			<img src="images/last-one-way.jpg" alt="last">
+			<h2>
+				Austin flannel salvia
+				<span class="date">05/05/2015</span>
+			</h2>
+		</div>
+		<div class="camera-details">
+			<span class="camera-model">
+				<i class="fa fa-camera"></i>
+				Cannon PowerShot S95
+			</span>
+			<span>
+				<i class="fa fa-eye"></i>22.5mm
+			</span>
+			<span>
+				<i class="fa fa-recycle"></i>f/5.6
+			</span>
+			<span>
+				<i class="fa fa-clock-o"></i>1/1000m
+			</span>
+		</div>
+	</article>
 </body>
 </html>
